--- a/choinka.html
+++ b/choinka.html
@@ -2,9 +2,10 @@
     <head>
         <title>choinka</title>
         <style type="text/css">
+            body, button { font-size: 40px; }
             pre { font: 20px Courier; }
-            button { padding: 20px; }
-            #choinka { zoom: 50%; display: inline-block; left: 600px; position: absolute; transition: 400ms transform; }
+            button { padding: 30px; }
+            #choinka { font-size: 40px; line-height: 30px; font-weight: bold; zoom: 50%; display: inline-block; left: 600px; position: absolute; transition: 400ms transform; }
         </style>
     </head>
     <body>
