--- a/memory/index.html
+++ b/memory/index.html
@@ -37,7 +37,7 @@
                 <div class="mdw-navdrawer__account">
                     <div class="mdw-navdrawer__image">
                         <div class="mdw-navdrawer__avatars-current">
-                            <div class="mdw-button" mdw-image><img width="100%" src="me.jpg"></div>
+                            <div class="mdw-button" mdw-image><img width="100%" src="resources/me.jpg"></div>
                         </div>
                         <div class="mdw-button mdw-navdrawer__subtitle autor">
                             <div class="mdw-navdrawer__name">Olka Nalazek</div>
@@ -67,7 +67,21 @@
         <div class="mdc-drawer-scrim"></div>
         <main class="main-content" id="main-content">
             <div class="mdc-top-app-bar--fixed-adjust">
-                App Content
+                <div class="pies n1"></div>
+                <div class="pies n2"></div>
+                <div class="pies n3"></div>
+                <div class="pies n4"></div>
+                <div class="pies n5"></div>
+                <div class="pies n6"></div>
+                <div class="pies n7"></div>
+                <div class="pies n8"></div>
+                <div class="pies n9"></div>
+                <div class="pies n10"></div>
+                <div class="pies n11"></div>
+                <div class="pies n12"></div>
+                <div class="pies n13"></div>
+                <div class="pies n14"></div>
+                <div class="pies n15"></div>
             </div>
         </main>
 
