dodaje tyl karty

--- a/memory/index.html
+++ b/memory/index.html
@@ -82,6 +82,9 @@
                 <div class="pies n13"></div>
                 <div class="pies n14"></div>
                 <div class="pies n15"></div>
+                <div class="karta n1"></div>
+                <div class="karta n2"></div>
+                <div class="karta n3"></div>
             </div>
         </main>
 
