dodaje nowe karty

--- a/memory/index.html
+++ b/memory/index.html
@@ -66,25 +66,25 @@
         </aside>        
         <div class="mdc-drawer-scrim"></div>
         <main class="main-content" id="main-content">
-            <div class="mdc-top-app-bar--fixed-adjust">
-                <div class="pies n1"></div>
-                <div class="pies n2"></div>
-                <div class="pies n3"></div>
-                <div class="pies n4"></div>
-                <div class="pies n5"></div>
-                <div class="pies n6"></div>
-                <div class="pies n7"></div>
-                <div class="pies n8"></div>
-                <div class="pies n9"></div>
-                <div class="pies n10"></div>
-                <div class="pies n11"></div>
-                <div class="pies n12"></div>
-                <div class="pies n13"></div>
-                <div class="pies n14"></div>
-                <div class="pies n15"></div>
-                <div class="karta n1"></div>
-                <div class="karta n2"></div>
-                <div class="karta n3"></div>
+            <div class="mdc-top-app-bar--fixed-adjust plansza">
+                <div class="karta"><div class="zakryta n1"></div></div>
+                <div class="karta"><div class="zakryta n2"></div></div>
+                <div class="karta"><div class="zakryta n3"></div></div>
+                <div class="karta"><div class="pies n1"></div></div>
+                <div class="karta"><div class="pies n2"></div></div>
+                <div class="karta"><div class="pies n3"></div></div>
+                <div class="karta"><div class="pies n4"></div></div>
+                <div class="karta"><div class="pies n5"></div></div>
+                <div class="karta"><div class="pies n6"></div></div>
+                <div class="karta"><div class="pies n7"></div></div>
+                <div class="karta"><div class="pies n8"></div></div>
+                <div class="karta"><div class="pies n9"></div></div>
+                <div class="karta"><div class="pies n10"></div></div>
+                <div class="karta"><div class="pies n11"></div></div>
+                <div class="karta"><div class="pies n12"></div></div>
+                <div class="karta"><div class="pies n13"></div></div>
+                <div class="karta"><div class="pies n14"></div></div>
+                <div class="karta"><div class="pies n15"></div></div>
             </div>
         </main>
 
