dodaje nowe karty

--- a/memory/index.html
+++ b/memory/index.html
@@ -85,6 +85,18 @@
                 <div class="karta"><div class="pies n13"></div></div>
                 <div class="karta"><div class="pies n14"></div></div>
                 <div class="karta"><div class="pies n15"></div></div>
+                <div class="karta"><div class="pies n1"></div></div>
+                <div class="karta"><div class="pies n2"></div></div>
+                <div class="karta"><div class="pies n3"></div></div>
+                <div class="karta"><div class="pies n4"></div></div>
+                <div class="karta"><div class="pies n5"></div></div>
+                <div class="karta"><div class="pies n6"></div></div>
+                <div class="karta"><div class="pies n7"></div></div>
+                <div class="karta"><div class="pies n8"></div></div>
+                <div class="karta"><div class="pies n9"></div></div>
+                <div class="karta"><div class="pies n10"></div></div>
+                <div class="karta"><div class="pies n11"></div></div>
+                <div class="karta"><div class="pies n12"></div></div>
             </div>
         </main>
 
