--- a/memory/index.html
+++ b/memory/index.html
@@ -26,6 +26,7 @@
                     <span class="mdc-top-app-bar__title">Gra memory</span>
                 </section>
                 <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+                    <div id="status"></div>
                     <div id="licznik"></div>
                     <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" id="serduszko" aria-label="Favorite">favorite</button>
                 </section>
